responsive fixed, overflow hidden, reinvert colors

--- a/app.css
+++ b/app.css
@@ -3,6 +3,7 @@ html, body {
   width: 100%;
   font-family: 'lato', sans-serif;
   font-size: 2vw;
+  overflow: hidden;
 }
 
 .all-container{
@@ -33,6 +34,8 @@ html, body {
 }
 
 .score-global{
+  position: relative;
+  top:20%;
   color: #fe3a44;
   font-size: 5vw;
 }
@@ -44,7 +47,7 @@ html, body {
 
 .btn-n-dice-container{
   position: absolute;
-  top: 3%;
+  top: 13%;
   left: 35%;
   height: 90%;
   width: 30%;
@@ -52,13 +55,16 @@ html, body {
   max-height: 100vw;
 }
 
+.player1 > p, .player2 > p {
+  position:relative;
+  top:20%;
+}
+
 .player1{
-  background-color: #FDFEFE;
   height: 100%;
 }
 
 .player2{
-  background-color: #F2F3F4;
   height: 100%;
 }
 
@@ -75,16 +81,22 @@ html, body {
 #dice{
   width: 10vw;
   height: 10vw;
+}@media screen and (orientation: landscape) and (min-aspect-ratio:20/9) {
+  .player1 > p, .player2 > p, .score-global {
+    top:0%;
+  }
 }
 @media screen and (orientation: landscape) and (min-aspect-ratio:14/9) {
   .current {
     position: relative;
     left: 35%;
-    top: 4%;
+    top: 24%;
     width: 30%;
     height: 7vw;
     font-size: 1.5vw;
-    background-color: #fe3a44;
+  }
+  .player1 > p, .player2 > p, .score-global {
+    top:12%;
   }
 }
 @media screen and (orientation: portrait) {
